<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sale On Demand</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="edittext_hint"><font size="13">Quantity</font></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_label_id">1</string>
    <string name="language_id">1</string>
    <string name="login">     Login</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="notifications">Notifications</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_account">My Account</string>
    <string name="share">Share</string>
    <string name="language_label">Language</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="policy">Policy</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="return_policy">Return Policy</string>
    <string name="download_our_app">Download App</string>
    <string name="switch_to_admin">Switch to Admin</string>
    <string name="seller_register">Seller Registration</string>
    <string name="optional">optional</string>
    <string name="msg">Hi, Welcome to </string>
    <string name="msg_2">I hope you will love it. Register and use referral code as</string>
    <string name="msg_3">For getting additional benefits visit</string>
    <string name="referyourfrnd">Refer Your Friends</string>
    <string name="seller_website">Seller Website</string>
    <string name="local_id_registration_number">Local ID Registration Number</string>
    <string name="local_id_registration_certificate">Local ID Registration Certificate</string>
    <string name="tax_registration_certificate">Tax Registration Certificate</string>
    <string name="cancelled_check_copy">Cancelled Cheque Copy</string>
    <string name="created_at">2019-07-01 20:42:53</string>
    <string name="updated_at">2019-07-01 20:42:53</string>
    <string name="vendor">Vendor</string>
    <string name="redeem">Redeem</string>
    <string name="contact_us">Contact Us</string>
    <string name="ref_id">Reference ID - </string>
    <string name="img">https://image.shutterstock.com/image-photo/beautiful-water-drop-on-dandelion-260nw-789676552.jpg</string>
    <string name="enter_bank_details">Enter bank details</string>
    <string name="return_and_replace"> Return and Replace</string>
    <string name="order_label_id">1</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="select_delivery_address">Select delivery address</string>
    <string name="new_address">New address</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="gst_number">GST Number</string>
    <string name="DOB">Date of Birth</string>
    <string name="amount">Amount</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="order_id">Order ID</string>
    <string name="pay_now">PAY NOW</string>
    <string name="order_detail"> Order Details</string>
    <string name="cancel_order">cancel order</string>
    <string name="need_help">Need Help?</string>
    <string name="shipping_details"> SHIPPING DETAILS</string>
    <string name="item_count">  Item Count</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="order_cancel_msg"> "Do you really want to Cancel this order?</string>
    <string name="confirm"> CONFIRM</string>
    <string name="ordered">Ordered</string>
    <string name="gst"> GST</string>
    <string name="order_failed">Order Failed</string>
    <string name="order_failed_msg">Order failed due to product or quantity unavailable</string>
    <string name="order_success">Order Success</string>
    <string name="order_success_msg">Your order has been successfully placed</string>
    <string name="empty_order_title">Looks like you do not have any orders</string>
    <string name="empty_order_description">Add your order now</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="total_amount_to_be_pay">Total amount to be pay</string>
    <string name="change_delivery_details">Change delivery details</string>
    <string name="yes">Yes</string>
    <string name="no"> No</string>
    <string name="confirm_your_order">Please confirm your order</string>
    <string name="select">Select</string>
    <string name="please_enter_new_delivery_details">Please enter new delivery details</string>
    <string name="please_provide_rating">Please provide rating</string>
    <string name="change">Change</string>
    <string name="add_new_address"> Add new address</string>
    <string name="select_country">Select country</string>
    <string name="select_state">Select state</string>
    <string name="select_city">Select city</string>
    <string name="select_pincode">Select pincode</string>
    <string name="select_area"> Select area</string>
    <string name="change_pincode">Change pincode</string>
    <string name="please_select_country_from_list">Please select country from list</string>
    <string name="please_select_state_from_list">Please select state from list</string>
    <string name="please_select_city_from_list">Please select city from list</string>
    <string name="please_select_pincode_from_list">Please select pincode from list</string>
    <string name="please_select_area_from_list">Please select area from list</string>
    <string name="continue_with">Continue with</string>
    <string name="enter_delivery_pincode">Enter delivery pincode</string>
    <string name="enter_pincode">Enter pincode</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="action">Action</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="existing_addresses">Existing Addresses</string>
    <string name="deliver_here">Deliver here</string>
    <string name="delivery_charges">PlDelivery Charges</string>
    <string name="choose_payment_option">Choose payment option</string>
    <string name="repayment">Repayment</string>
    <string name="payment_status">Payment status</string>
    <string name="please_give_reason_for_cancellation">Please give reason for cancellation</string>
    <string name="order_status">Order status</string>
    <string name="order_placed"> Order placed</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="online_payment">Online payment</string>
    <string name="COD">COD</string>
    <string name="order_attachment">Order attachment</string>
    <string name="order_placed_successfully">Order placed successfully</string>
    <string name="transaction_number">Transaction number</string>
    <string name="thank_you_for_placing_order_at"> Thank you for placing order at</string>
    <string name="cancel_reason">Cancellation reason</string>
    <string name="wishlist_label_id">1</string>
    <string name="wishlist"> Wishlist</string>
    <string name="clear_wishlist">CLEAR WISHLIST</string>
    <string name="empty_wishlist_title">No wishlist available</string>
    <string name="empty_wishlist_description">No products in wishlist</string>
    <string name="move_to_wishlist">Move to wishlist</string>
    <string name="user_label_id">1</string>
    <string name="enter_password"> Enter Password</string>
    <string name="change_password">Change Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="my_addresses">My Addresses</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="or"> or</string>
    <string name="sign_in">Sign In </string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">SUBMIT</string>
    <string name="verification">Verification</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_msg">We have sent to an OTP via SMS on your mobile number</string>
    <string name="otp">OTP </string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="retry"> Retry?</string>
    <string name="password_empty">Password can not be empty</string>
    <string name="pincode_empty">Pincode can not be empty</string>
    <string name="review_empty">Review can not be empty</string>
    <string name="contact_number_empty">Contact number can not be empty</string>
    <string name="please_enter_a_valid_number">Please enter a valid number</string>
    <string name="email_empty">Email can not be empty</string>
    <string name="dob_empty">Date of birth can not be empty </string>
    <string name="password_length_should_be_8_characters">Password length should be 6 charcters</string>
    <string name="address_empty"> address can not be empty?</string>
    <string name="please_enter_GST_number">Please enter GST number</string>
    <string name="description_empty">Description can not be empty</string>
    <string name="name_empty">Name can not be empty</string>
    <string name="do_you_want_to_logout">Do you want to logout? </string>
    <string name="continue_as_guest">Continue as Guest </string>
    <string name="profile"> Profile </string>
    <string name="dob"> DOB</string>
    <string name="area">Area </string>
    <string name="state">State</string>
    <string name="city"> City?</string>
    <string name="business_name">Business Name</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in_with_your_regular_account"> Sign in with your regular account</string>
    <string name="guest">Guest</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register_now">Register now</string>
    <string name="i_read_and_accept_terms_conditions">I read and accept Terms And Conditions</string>
    <string name="send_me_the_newsletter_weekly">Send me the Newsletter weekly</string>
    <string name="if_you_have_an_account">If you have an account?</string>
    <string name="notification_label_id">1</string>
    <string name="empty_notification_title"> No notification yet</string>
    <string name="empty_notification_description">You will receive the notification soon</string>
    <string name="gateway_label_id">1</string>
    <string name="payment_options">Payment Options</string>
    <string name="pay_u_money">Pay U Money</string>
    <string name="pay_pal">Pay Pal</string>
    <string name="paytm">PayTM</string>
    <string name="razorpay">RazorPay</string>
    <string name="mobi_kwik">Mobikwik </string>
    <string name="c_c_avenue">Cc Avenue</string>
    <string name="complaint_label_id">1</string>
    <string name="add_complaint">Add Complaint</string>
    <string name="select_complaint_type">Select Complaint Type</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="subject">Subject</string>
    <string name="continue_shopping">CONTINUE SHOPPING </string>
    <string name="comment">Comment</string>
    <string name="username">Username</string>
    <string name="country">Country</string>
</resources>