<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.example.grocery.CustomViews.CustomTextView
        android:layout_marginStart="@dimen/dimen_10dp"
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/do_you_want_to_logout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/dialog_title"
        android:orientation="horizontal">

        <com.example.grocery.CustomViews.CustomButton
            android:id="@+id/dialog_no"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:text="@string/no" />

        <com.example.grocery.CustomViews.CustomButton
            android:id="@+id/dialog_yes"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:text="@string/yes" />
    </LinearLayout>

</RelativeLayout>