<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.grocery.Activities.Contact_Us">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbarback" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">


            <com.example.grocery.CustomViews.CustomEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginTop="60dp"
                android:background="@drawable/edittextselector"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/accountloginstart"
                android:hint="@string/name"
                android:paddingStart="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:visibility="visible" />

            <com.example.grocery.CustomViews.CustomEditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_below="@id/username"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittextselector"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/mobileiconstart"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:visibility="visible" />

            <com.example.grocery.CustomViews.CustomEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_below="@id/contact"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittextselector"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/emailiconstart"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:visibility="visible" />



            <com.example.grocery.CustomViews.CustomEditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_below="@id/email"
                android:background="@drawable/edittextselector"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/subject"
                android:hint="@string/subject"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:visibility="visible" />



            <com.example.grocery.CustomViews.CustomEditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_below="@id/emailsignup"
                android:background="@drawable/edittextselector"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/comment"
                android:hint="@string/comment"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:visibility="visible" />

            <com.example.grocery.CustomViews.CustomButton
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/comment"
                android:layout_marginTop="40dp"
                android:background="@drawable/buttonshape"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="12dp" />
        </LinearLayout>
        <include
            android:id="@+id/loaderBlurred"
            layout="@layout/blurredloader" />
    </RelativeLayout>
</RelativeLayout>