<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.grocery.Activities.SuccessOrder">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbarback" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/continueShopingCheck"
                android:layout_gravity="center"
                app:srcCompat="@drawable/cancelorder"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <com.example.grocery.CustomViews.CustomTextView
                android:textColor="@color/black"
                android:id="@+id/orderFailedText"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:text="@string/order_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.example.grocery.CustomViews.CustomTextView
         android:id="@+id/orderFailedMsg"
               
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:maxLines="2"
                android:text="@string/order_failed_msg"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.example.grocery.CustomViews.CustomButton
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingStart="10dp"
                android:id="@+id/continueshopping"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:textColor="#fff"
                android:text="@string/continue_shopping"
                android:background="@drawable/buttonshape"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </LinearLayout>



    </LinearLayout>
    <include
        layout="@layout/whiteloader"
        android:id="@+id/whiteloader"/>
</RelativeLayout>

